fix onda al cambio view (non più visibile)

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -2,9 +2,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 200vw;
+  width: 100vw;
   height: 100vh;
-  background-color: #252422;
+  background-color: #161616;
   z-index: 999;
   display: flex;
   justify-content: flex-end;
@@ -13,7 +13,7 @@
 .nero {
 
   transform: translateX(100%);
-  transition: transform 3s ease;
+  transition: transform 0.6s linear;
 }
 
 .nero.show {
