--- a/src/app/home/ciao-angelo/ciao-angelo.component.css
+++ b/src/app/home/ciao-angelo/ciao-angelo.component.css
@@ -99,7 +99,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  z-index: 999;
+  z-index: 998;
   width: 100%;
 }
 
