--- a/src/app/home/nav-bar/nav-bar.component.css
+++ b/src/app/home/nav-bar/nav-bar.component.css
@@ -34,9 +34,9 @@ a:hover{
   position: fixed;
   top: 0;
   left: 0;
-  width: 200vw;
+  width: 100vw;
   height: 100vh;
-  background-color: #252422;
+  background-color: #161616;
   z-index: 999;
   display: flex;
   justify-content: flex-end;
@@ -45,11 +45,11 @@ a:hover{
 .nero {
 
   transform: translateX(100%);
-  transition: transform 3s ease;
+  transition: transform 0.6s linear;
 }
 
 .nero.show {
-  transform: translateX(-60%);
+  transform: translateX(0%);
 }
 
 
